--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>HTML Images</title>
 </head>
 <body>
-
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion image">
+  <img src="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="lion image" title="yawning lion">
   <!-- Your code here -->
 
 </body>
